Modificado extensión Imágenes a *.jpg
Modificado extensión Imágenes a *.jpg, veremos si ese es el motivo que no nos muestre...

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 
  			    </div>
 			    <div class="col">
-			      <img src="images/Growlers-c01.png" width="600" height="400">
+			      <img src="images/Growlers-c01.jpg" width="600" height="400">
 			    </div>
 			  </div>
 			</div>
